# shlab

./: README.md  plannar.webm
Task1/: README.md  main.py
Task1/modules/: environment.py  manipulator.py  perception.py
Task2/: .gitignore  README.md
Task2/src/shlab_control/: package.xml
Task2/src/shlab_control/launch/: spawn.launch.py
Task2/src/shlab_control/models/: robot.xacro
Task2/src/shlab_control/worlds/: test_world.sdf
Task2/src/shlab_description/launch/: rsp.launch.py  view.launch.py
Task2/src/shlab_description/models/: robot.xacro
Task2/src/shlab_description/rviz/: moveit.rviz  view.rviz
Task2/src/shlab_moveit_config/: package.xml
Task2/src/shlab_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml
src/shlab_control/config/: controllers.yaml
src/shlab_description/: package.xml
src/shlab_description/rviz/: executor.rviz
src/shlab_description/srv/: Goal.srv
src/shlab_executor/: package.xml
src/shlab_executor/include/shlab_executor/: hybrid_planner.hpp
src/shlab_executor/launch/: executor.launch.py  play.launch.py  run.launch.py
src/shlab_executor/src/: executor.cpp  hybrid_planner.cpp
src/shlab_moveit_config/config/: controllers.yaml
src/shlab_moveit_config/launch/: moveit.launch.py
src/shlab_moveit_config/models/: robot.srdf
